--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -10,4 +12,7 @@ div[data-reactroot] {
   height: 100%;
   padding: 0;
   margin: 0;
+  font-family: 'Raleway', sans-serif;
+
 }
+
