got the background image to render

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,5 +1,6 @@
 .hero {
   height: 500px;
+  background-image: url(https://carolinem15.github.io/reactportfolio/background.jpeg);
   background-size: cover;
   background-position: center;
   position: relative;
